tests/errors/first_stage/.define/value_expected/value_expected.as
; constant definition expects a value
.define a =